# howto

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  main.rs
src/args/subcommands/: auth.rs  mod.rs  query.rs
src/openai/: client.rs
