[package]
version = "1.0.0"
authors = ["Rich Baird <rich.baird@utah.edu>"]
license = "MIT"
description = "Get directions for how to do anything in the terminal. Powered by ChatGPT. Like TLDR, but smarter."
readme = "README.md"
homepage = "https://github.com/richbai90/howto"
repository = "https://github.com/richbai90/howto"
keywords = ["cli", "ai", "gpt", "help"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"