[package]
name = "howtoshell"
version = "1.0.1"
edition = "2021"
authors = ["Rich Baird <rich.baird@utah.edu>"]
description = "Get directions for how to do anything in the terminal. Powered by ChatGPT. Like TLDR, but smarter."
repository = "https://github.com/richbai90/howto"
license = "MIT"
readme = "README.md"
keywords = ["howto", "how", "terminal", "ai", "gpt"]
about = "Lookup how to do something in the terminal with a single command"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
